--- a/src/app/core/components/shared/view-expert/view-expert.component.html
+++ b/src/app/core/components/shared/view-expert/view-expert.component.html
@@ -31,7 +31,7 @@
     </mat-form-field>
     <mat-form-field *ngIf="form.get('type').value == 'person'" class="div-half" appearance="outline">
         <mat-label>Codice fiscale</mat-label>
-        <input formControlName="fiscal_code" matInput type="text">
+        <input formControlName="fiscal_code" matInput type="text" oninput="this.value = this.value.toUpperCase()">
         <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati" (click)="autocomplete()" [disabled]="checkFiscalCode()">
             <mat-icon>post_add</mat-icon>
         </button>
@@ -92,6 +92,16 @@
             <mat-error>{{getErrorMessage(form.get('address').get('postcode'))}}</mat-error>
         </mat-form-field>
     </ng-container>
+    <mat-form-field class="div-half" appearance="outline">
+        <mat-label>Telefono</mat-label>
+        <input formControlName="phone" matInput type="text">
+        <mat-error>{{getErrorMessage(form.get('phone'))}}</mat-error>
+    </mat-form-field>
+    <mat-form-field class="div-half" appearance="outline">
+        <mat-label>Email</mat-label>
+        <input formControlName="email" matInput type="email">
+        <mat-error>{{getErrorMessage(form.get('email'))}}</mat-error>
+    </mat-form-field>
     <mat-expansion-panel *ngIf="form.get('type').value != 'person' && formContacts.controls.length > 0" formArrayName="contacts" [expanded]="formContacts.controls.length > 0">
         <mat-expansion-panel-header>
             <mat-panel-title>
@@ -133,16 +143,6 @@
             <button *ngIf="can_modify" class="button-add" mat-raised-button color="primary" (click)="addContatto(form.get('contacts'));">Aggiungi</button>
         </div>
     </mat-expansion-panel>
-    <mat-form-field class="div-half" appearance="outline">
-        <mat-label>Telefono</mat-label>
-        <input formControlName="phone" matInput type="text">
-        <mat-error>{{getErrorMessage(form.get('phone'))}}</mat-error>
-    </mat-form-field>
-    <mat-form-field class="div-half" appearance="outline">
-        <mat-label>Email</mat-label>
-        <input formControlName="email" matInput type="email">
-        <mat-error>{{getErrorMessage(form.get('email'))}}</mat-error>
-    </mat-form-field>
     <mat-error>{{getErrorMessage(form)}}</mat-error>
 </ng-container>
 
