--- a/src/app/pratiche/moduli/components-edilizia/rottura-suolo/rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/rottura-suolo/rottura-suolo.component.html
@@ -9,16 +9,17 @@
     </mat-expansion-panel-header>
     <p class="padding-div">Inoltra la presente istanza al fine di essere autorizzato alla rottura del suolo pubblico di cui all'oggetto per</p>
     <mat-form-field class="div-full" appearance="outline">
-        <mat-label>Motivo scavi</mat-label>
+        <mat-label>Motivazione</mat-label>
         <input matInput formControlName="reason" type="text">
         <mat-error>{{getErrorMessage(form.get('reason'))}}</mat-error>
     </mat-form-field>
     <ng-container formGroupName="description">
         <mat-form-field class="div-full" appearance="outline">
-            <mat-label>Causale</mat-label>
+            <mat-label>Descrizione</mat-label>
             <input matInput formControlName="motive" type="text">
             <mat-error>{{getErrorMessage(form.get(['description','motive']))}}</mat-error>
         </mat-form-field>
+        <mat-expansion-panel expanded>
         <mat-form-field class="div-a-third" appearance="outline">
             <mat-label>Tipo di posa</mat-label>
             <input matInput formControlName="laying_type" type="text">
@@ -39,6 +40,7 @@
             <mat-hint>Lunghezza espressa in metri</mat-hint>
             <mat-error>{{getErrorMessage(form.get(['description','length']))}}</mat-error>
         </mat-form-field>
+    </mat-expansion-panel>
         <mat-form-field class="div-full" appearance="outline">
             <mat-label>Note</mat-label>
             <textarea matInput formControlName="notes" type="text"></textarea>
@@ -79,7 +81,7 @@
         <mat-select formControlName="flooring_type" (selectionChange)="multiplicationPolizza(form, 'excavation_details/area_number', 'flooring_type', 'insurance/amount')">
             <mat-option>Nessuna</mat-option>
             <mat-option *ngFor="let flooring_type of pavimentazioni" [value]="flooring_type.value">
-                {{flooring_type.name}} - € {{flooring_type.price}} m<sup>2</sup>
+                {{flooring_type.name}}
             </mat-option>
         </mat-select>
         <mat-error>{{getErrorMessage(form.get('flooring_type'))}}</mat-error>
@@ -120,7 +122,7 @@
                     <mat-error>{{getErrorMessage(formAddress.controls[i].get('street_name'))}}</mat-error>
                 </mat-form-field>
                 <mat-form-field class="div-a-quarter" appearance="outline">
-                    <mat-label>Dal</mat-label>
+                    <mat-label>Dal civico</mat-label>
                     <mat-select formControlName="from_street_number">
                         <mat-option value="sn">Senza numero</mat-option>
                         <mat-option *ngFor="let civico of civici[i] || []" [value]="civico.civico">
@@ -130,7 +132,7 @@
                     <mat-error>{{getErrorMessage(formAddress.controls[i].get('from_street_number'))}}</mat-error>
                 </mat-form-field>
                 <mat-form-field class="div-a-quarter" appearance="outline">
-                    <mat-label>Al</mat-label>
+                    <mat-label>Al civico</mat-label>
                     <mat-select formControlName="to_street_number">
                         <mat-option value="sn">Senza numero</mat-option>
                         <mat-option *ngFor="let civico of civici[i] || []" [value]="civico.civico">
