--- a/src/assets/css/form-style.scss
+++ b/src/assets/css/form-style.scss
@@ -141,7 +141,7 @@ mat-radio-button{
     margin-top: .25em;
 }
 
-.vartical-radiobutton{
+.vertical-radiobutton{
     display: flex;
     flex-direction: column;
 }
