--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,11 +31,11 @@
         </mat-list-item>
         <mat-divider></mat-divider>
         <h3 matSubheader>Pratiche</h3>
+        <mat-list-item (click)="mobileQuery.matches ? snav.toggle() : null" routerLink="ricerca-pratiche">
+          <h4 matLine>Consultazione pubblica</h4>
+        </mat-list-item>
           <mat-list-item (click)="mobileQuery.matches ? snav.toggle() : null" routerLink="nuova-pratica">
             <h4 matLine>Nuova</h4>
-          </mat-list-item>
-          <mat-list-item (click)="mobileQuery.matches ? snav.toggle() : null" routerLink="ricerca-pratiche">
-            <h4 matLine>Ricerca</h4>
           </mat-list-item>
           <mat-list-item *ngIf="isUserLoggedIn" (click)="mobileQuery.matches ? snav.toggle() : null" routerLink="mie-pratiche">
             <h4 matLine>Le mie pratiche</h4>
