--- a/src/app/pratiche/moduli/components-edilizia/expert/expert.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/expert/expert.component.html
@@ -36,8 +36,9 @@
     </mat-form-field>
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Codice fiscale</mat-label>
-        <input formControlName="fiscal_code" matInput type="text">
-        <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati" (click)="autocomplete()" [disabled]="checkFiscalCode()">
+        <input formControlName="fiscal_code" matInput type="text" oninput="this.value = this.value.toUpperCase()">
+        <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati"
+            (click)="autocomplete()" [disabled]="checkFiscalCode()">
             <mat-icon>post_add</mat-icon>
         </button>
         <mat-error>{{getErrorMessage(form.get('fiscal_code'))}}</mat-error>
@@ -55,7 +56,8 @@
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Partita IVA</mat-label>
         <input formControlName="vat" matInput type="text">
-        <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati" (click)="autocomplete()" [disabled]="checkVat()">
+        <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati"
+            (click)="autocomplete()" [disabled]="checkVat()">
             <mat-icon>post_add</mat-icon>
         </button>
         <mat-error>{{getErrorMessage(form.get('vat'))}}</mat-error>
@@ -66,7 +68,18 @@
         <mat-error>{{getErrorMessage(form.get('name'))}}</mat-error>
     </mat-form-field>
     <ng-container formGroupName="address">
-        <mat-form-field class="div-half" appearance="outline">
+        <mat-form-field class="div-a-third" appearance="outline">
+            <mat-label>Stato</mat-label>
+            <mat-select formControlName="country"
+                (selectionChange)="onChangeCountry('address/country', 'address/county')">
+                <mat-option>----</mat-option>
+                <mat-option *ngFor="let nazione of nazioni" [value]="nazione">
+                    {{nazione.name}}
+                </mat-option>
+            </mat-select>
+            <mat-error>{{getErrorMessage(form.get('address').get('country'))}}</mat-error>
+        </mat-form-field>
+        <mat-form-field class="div-a-third" appearance="outline">
             <mat-label>Provincia</mat-label>
             <mat-select formControlName="county" (selectionChange)="onChangeProvince('address/county', 'address/city')">
                 <mat-option>----</mat-option>
@@ -76,7 +89,7 @@
             </mat-select>
             <mat-error>{{getErrorMessage(form.get('address').get('county'))}}</mat-error>
         </mat-form-field>
-        <mat-form-field class="div-half" appearance="outline">
+        <mat-form-field class="div-a-third" appearance="outline">
             <mat-label>Comune</mat-label>
             <mat-select formControlName="city" [disabled]="checkValidation(['address/county'])">
                 <mat-option>----</mat-option>
@@ -97,6 +110,16 @@
             <mat-error>{{getErrorMessage(form.get('address').get('postcode'))}}</mat-error>
         </mat-form-field>
     </ng-container>
+    <mat-form-field class="div-half" appearance="outline">
+        <mat-label>Telefono</mat-label>
+        <input formControlName="phone" matInput type="text">
+        <mat-error>{{getErrorMessage(form.get('phone'))}}</mat-error>
+    </mat-form-field>
+    <mat-form-field class="div-half" appearance="outline">
+        <mat-label>Email</mat-label>
+        <input formControlName="email" matInput type="email">
+        <mat-error>{{getErrorMessage(form.get('email'))}}</mat-error>
+    </mat-form-field>
     <mat-expansion-panel [disabled]="!formContacts.enabled" formArrayName="contacts"
         [expanded]="formContacts.enabled && formContacts.controls.length > 0">
         <mat-expansion-panel-header>
@@ -142,15 +165,5 @@
                 (click)="addContatto(form.get('contacts'));">Aggiungi</button>
         </div>
     </mat-expansion-panel>
-    <mat-form-field class="div-half" appearance="outline">
-        <mat-label>Telefono</mat-label>
-        <input formControlName="phone" matInput type="text">
-        <mat-error>{{getErrorMessage(form.get('phone'))}}</mat-error>
-    </mat-form-field>
-    <mat-form-field class="div-half" appearance="outline">
-        <mat-label>Email</mat-label>
-        <input formControlName="email" matInput type="email">
-        <mat-error>{{getErrorMessage(form.get('email'))}}</mat-error>
-    </mat-form-field>
     <mat-error>{{getErrorMessage(form)}}</mat-error>
 </ng-container>
