--- a/src/app/pratiche/moduli/components-edilizia/owner/owner.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/owner/owner.component.html
@@ -44,7 +44,7 @@
     </mat-form-field>
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Codice fiscale</mat-label>
-        <input formControlName="fiscal_code" matInput type="text">
+        <input formControlName="fiscal_code" matInput type="text" oninput="this.value = this.value.toUpperCase()" >
         <button mat-icon-button matSuffix matTooltip="Compila i campi mancanti con i propri dati" (click)="autocomplete()" [disabled]="checkFiscalCode()">
             <mat-icon>post_add</mat-icon>
         </button>
@@ -75,7 +75,7 @@
     </mat-form-field>
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Numero documento</mat-label>
-        <input formControlName="document_number" matInput type="text">
+        <input formControlName="document_number" matInput type="text" oninput="this.value = this.value.toUpperCase()">
         <mat-error>{{getErrorMessage(form.get('document_number'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third" appearance="outline">
@@ -150,6 +150,16 @@
             <mat-error>{{getErrorMessage(form.get('address').get('postcode'))}}</mat-error>
         </mat-form-field>
     </ng-container>
+    <mat-form-field class="div-half" appearance="outline">
+        <mat-label>Telefono</mat-label>
+        <input formControlName="phone" matInput type="text">
+        <mat-error>{{getErrorMessage(form.get('phone'))}}</mat-error>
+    </mat-form-field>
+    <mat-form-field class="div-half" appearance="outline">
+        <mat-label>Email</mat-label>
+        <input formControlName="email" matInput type="email">
+        <mat-error>{{getErrorMessage(form.get('email'))}}</mat-error>
+    </mat-form-field>
     <mat-expansion-panel [disabled]="!formContacts.enabled" formArrayName="contacts"
         [expanded]="formContacts.enabled && formContacts.controls.length > 0">
         <mat-expansion-panel-header>
@@ -195,26 +205,6 @@
                 (click)="addContatto(form.get('contacts'));">Aggiungi</button>
         </div>
     </mat-expansion-panel>
-    <mat-form-field class="div-half" appearance="outline">
-        <mat-label>Telefono</mat-label>
-        <input formControlName="phone" matInput type="text">
-        <mat-error>{{getErrorMessage(form.get('phone'))}}</mat-error>
-    </mat-form-field>
-    <!-- <mat-form-field class="div-half" appearance="outline">
-        <mat-label>Cellulare</mat-label>
-        <input formControlName="cellular" matInput type="number" (change)="check(form, 'cellular','phone')">
-        <mat-error>{{getErrorMessage(form.get('cellular'))}}</mat-error>
-    </mat-form-field> -->
-    <mat-form-field class="div-half" appearance="outline">
-        <mat-label>Email</mat-label>
-        <input formControlName="email" matInput type="email">
-        <mat-error>{{getErrorMessage(form.get('email'))}}</mat-error>
-    </mat-form-field>
-    <!-- <mat-form-field class="div-half" appearance="outline">
-        <mat-label>PEC</mat-label>
-        <input formControlName="pec" matInput type="email">
-        <mat-error>{{getErrorMessage(form.get('pec'))}}</mat-error>
-    </mat-form-field> -->
     <mat-error>{{getErrorMessage(form)}}</mat-error>
 
 </mat-expansion-panel>
