--- a/src/app/core/components/map/map.component.html
+++ b/src/app/core/components/map/map.component.html
@@ -33,8 +33,11 @@
         </button>
     </div>
     <div id="close_panel">
-        <button mat-raised-button matTooltip="Chiudi mappa" matTooltipPosition="below" (click)="close()">
+        <button mat-raised-button matTooltip="Chiudi mappa" matTooltipPosition="before" (click)="close()">
             <fa-icon icon="times"></fa-icon>
+        </button>
+        <button mat-raised-button matTooltip="Salva ed esci" matTooltipPosition="before" (click)="save()">
+            <fa-icon icon="save"></fa-icon>
         </button>
     </div>
     <div id="zoom_panel">
@@ -68,11 +71,11 @@
             </ng-container>
         </mat-menu>
     </div>
-    <div id="save_panel">
+    <!-- <div id="save_panel">
         <button mat-raised-button matTooltip="Salva" matTooltipPosition="before" (click)="save()">
             <fa-icon icon="save"></fa-icon>
             Salva ed esci
         </button>
-    </div>
+    </div> -->
     <div class="measureTooltip"></div>
 </div>
