--- a/src/app/core/components/map/map.component.html
+++ b/src/app/core/components/map/map.component.html
@@ -6,7 +6,7 @@
         <mat-icon>menu</mat-icon>
     </button> -->
     <div id="panel_options" class="sidepanel">
-        <mat-card class="menu_panel">
+        <!-- <mat-card class="menu_panel">
             <span class="example-fill-remaining-space"></span>
             <mat-form-field appearance="legacy" floatLabel="never">
                 <input matInput placeholder="Cerca...">
@@ -14,7 +14,7 @@
                     <mat-icon>search</mat-icon>
                 </button>
             </mat-form-field>
-        </mat-card>
+        </mat-card> -->
         <ng-container *ngFor="let button of options.buttons">
             <button [disabled]="canDraw(button.target, 1)" class="features_button" mat-raised-button (click)="addInteraction(button.geometryType, button.style, button.target)" [matTooltip]="button.tooltip" matTooltipPosition="after" [ngClass]="draw ? 'selected_button' : ''">
                 <fa-icon icon="draw-polygon"></fa-icon> {{button.name}}
