--- a/src/app/pratiche/moduli/components-edilizia/owner/owner.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/owner/owner.component.html
@@ -147,7 +147,7 @@
         </mat-form-field>
         <mat-form-field class="div-a-third" appearance="outline">
             <mat-label>Cap</mat-label>
-            <input formControlName="postcode" matInput type="number">
+            <input formControlName="postcode" matInput type="text">
             <mat-error>{{getErrorMessage(form.get('address').get('postcode'))}}</mat-error>
         </mat-form-field>
     </ng-container>
