--- a/src/app/core/components/shared/filter-procedures/filter-procedures.component.html
+++ b/src/app/core/components/shared/filter-procedures/filter-procedures.component.html
@@ -1,6 +1,6 @@
 <mat-card [formGroup]="filter" class="referente-group">
     <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
-    <mat-form-field class="div-a-quarter" appearance="outline">
+    <mat-form-field [ngClass]="myProcedures ? 'div-a-quarter' : 'div-half'" appearance="outline">
         <mat-label>Categoria</mat-label>
         <mat-select formControlName="category">
             <mat-option>----</mat-option>
@@ -9,7 +9,7 @@
             </mat-option>
         </mat-select>
     </mat-form-field>
-    <mat-form-field class="div-a-quarter" appearance="outline">
+    <mat-form-field [ngClass]="!myProcedures ? 'invisible' : 'div-a-quarter'" appearance="outline">
         <mat-label>Stato pratica</mat-label>
         <mat-select formControlName="status">
             <mat-option>----</mat-option>
@@ -40,13 +40,13 @@
         <input formControlName="referrer_surname" matInput type="text">
     </mat-form-field>
     <mat-form-field class="div-a-quarter" appearance="outline">
-        <mat-label>Dal civico</mat-label>
+        <mat-label>Dal</mat-label>
         <input formControlName="created_at_since" matInput [matDatepicker]="created_at_since">
         <mat-datepicker-toggle matSuffix [for]="created_at_since"></mat-datepicker-toggle>
         <mat-datepicker #created_at_since></mat-datepicker>
     </mat-form-field>
     <mat-form-field class="div-a-quarter" appearance="outline">
-        <mat-label>Al civico</mat-label>
+        <mat-label>Al</mat-label>
         <input formControlName="created_at_until" matInput [matDatepicker]="created_at_until">
         <mat-datepicker-toggle matSuffix [for]="created_at_until"></mat-datepicker-toggle>
         <mat-datepicker #created_at_until></mat-datepicker>
