--- a/src/app/pratiche/moduli/edilizia/edilizia.component.scss
+++ b/src/app/pratiche/moduli/edilizia/edilizia.component.scss
@@ -3,6 +3,12 @@ mat-expansion-panel{
     margin-bottom: 1em;
 }
 
+// form {
+//   max-width: 900px;
+//   margin-left: auto;
+//   margin-right: auto;
+// }
+
 .overlay{
     height:100vh;
     width:100%;
