--- a/src/app/nuova-pratica/nuova-pratica.component.html
+++ b/src/app/nuova-pratica/nuova-pratica.component.html
@@ -18,7 +18,7 @@
       </div>
       <div>
         <!-- <button mat-button matStepperNext>Avanti</button> -->
-        <button mat-button (click)="submit()">Conferma</button>
+        <button mat-raised-button color="primary" (click)="submit()">Conferma</button>
       </div>
     </form>
   </mat-step>
